--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -45,7 +45,7 @@ ta_oa_inst <- readr::read_csv(here::here("data", "ta_oa_inst.csv.gz"))
 
 ```
 
-What are the number and proportion of open access articles in hybrid journals published under a transformative agreement?
+# Results
 
 ```{r overview_data_prep}
 ta_oa_growth <- ta_oa_inst |>
@@ -121,6 +121,8 @@ n_ta_oa <- ta_oa_inst |>
   distinct(doi) |>
   nrow()
 ```
+
+## Overview
 
 Between 2018 and 2022, a total of `r n_hybrid_jns` out of `r n_hybrid_jns_all` hybrid journals in transformative agreements published at least one open access article under a Creative Commons license.
 During this period, these hybrid journals provided open access to `r n_oa` out of `r n_total` articles, representing a five-year open access proportion of `r n_oa / n_total * 100`%.
@@ -292,6 +294,8 @@ For instance, in 2022, the Germany-based journals Zeitschrift für Erziehungswis
 Despite the rise in transformative agreements, it is worth noting that other means of publishing open access in hybrid journals remained common. 
 In total, `r summary_all |> filter(cr_year == "2022", value > 0, name == "prop_no_ta") |> nrow()` journals published open access articles from authors affiliated with institutions without transformative agreements in place, while `r summary_all |> filter(cr_year == "2022", value > 0, name == "prop_ta_oa") |> nrow()` journals published at least one open access article through a transformative agreement in the same year.
 
+## Publishing market
+
 ```{r}
 jn_ind_jct <- hoaddata::jct_hybrid_jns |>
   inner_join(hoaddata::jn_ind, by = "issn_l") |>
@@ -400,7 +404,7 @@ publisher_boxplot <- publisher_plot_df |>
   scale_y_continuous(expand = expansion(mult = c(0, 0.05)),
                      labels = scales::percent) +
   scale_fill_manual(
-    "Hybrid OA",
+    NULL,
     values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"),
     labels = c(no_ta = "Other", ta_oa = "Agreement")
   ) +
@@ -614,6 +618,8 @@ top_level_by_year_oa <- top_level_by_year_oa_frac |>
   inner_join(top_level_by_year_jn)
 ```
 
+## Journal subjects
+
 Table presents a high-level overview of hybrid open access by AJCS subject area using fractionalised counting to account for journals belonging to more than one category. 
 Between 2018 and 2022, most hybrid journals with at least one open articles could be attributed to the social sciences including the humanities.
 However, these journals published the fewest number of articles, whereas physical sciences journals recorded most articles, followed by the health sciences and the life sciences. 
@@ -771,7 +777,7 @@ Figure presents the relative growth of hybrid open access by subject area betwee
 <!-- In particular, journals in the subject areas recorded large high rate (see supplement)-->
 This growth in the social sciences can be largely attributed to transformative agreements. In 2022, two-third of open access articles (`r subject_ta_trend_plot$data |> filter(cr_year == "2022", top_level == "Social Sciences") |> pull(prop) * 100`%, n = `r subject_ta_trend_plot$data |> filter(cr_year == "2022", top_level == "Social Sciences") |> pull(ta_oa_frac)`) could be attributed to transformative agreements. 
 Figure C shows that this trend is consistent across Social Sciences journals.
-In 2022, 25% of Social Science journals were able to faciliate open access to every fourth article soley through transformative agreements.
+In 2022, 25% of Social Science journals were able to faciliate open access to at least every fourth article soley through transformative agreements.
 However, it is noteworthy that hybrid open access through transformative agreements played a comparable lesser role in the Life Sciences and Health Sciences. 
 In these two subject areas, only about half of the open access articles can be linked to transformative agreements, both overall and on median average across journals.
 In contrast, the majority of Physical Science Journals, shows an increase of open access through transformative agreements compared to other options to publish open access in hybrid journals.
@@ -894,7 +900,7 @@ top_20_plot_df <-
 ```
 
 ```{r, country_plot, fig.asp=0.8}
-ggplot(top_20_plot_df, aes(
+country_plot <- ggplot(top_20_plot_df, aes(
     gsub("^20", "'", as.character(cr_year)),
     value / all_total,
     group = type,
@@ -904,7 +910,7 @@ ggplot(top_20_plot_df, aes(
             linewidth = 0.15,
             stat = "identity") +
 scale_fill_manual(
-    "Hybrid OA",
+    NULL,
     values = c(no_ta = "#b3b3b3a0", ta_oa = "#56B4E9"),
     labels = c(no_ta = "Other", ta_oa = "Agreement"),
     guide = guide_legend(reverse = TRUE)
@@ -933,7 +939,8 @@ scale_fill_manual(
   )
 ```
 
-here a scatterplot and a classifciation of oecd / brics / other. first, the scatterplot 2022!
+## Comparing countries
+
 
 ```{r}
 oecd <- readr::read_csv(here::here("data", "oecd.csv")) |>
@@ -948,6 +955,11 @@ country_scatter_df <- country_df |>
     .default = "Other"
   ))
 
+oecd_stats <- readr::read_csv(here::here("data", "oecd_stats.csv"))
+oecd_stats_global <- oecd_stats |> 
+  filter(issn_l != "0027-8424", !cr_year %in%  c("2017", "2023")) |>
+  filter(issn_l %in% hoaddata::cc_articles$issn_l) |>
+  group_by(cat) |> summarise(articles = sum(articles), oa = sum(oa), ta_oa = sum(ta_oa))
 ```
 
 ```{r country_bar_chart_top_20}
@@ -1033,12 +1045,42 @@ country_bar <- ggplot(oecd_stats_df, aes(gsub("^20", "'", as.character(cr_year))
             linewidth = 0.15) +
   scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels =  scales::number_format(big.mark = ",")) +
   facet_wrap(~ cat) +
-  scale_fill_manual("Hybrid OA", values = c(oa_other = "#b3b3b3a0", ta_oa = "#56B4E9", closed = "#e1e1e1a0"),
+  scale_fill_manual(NULL, values = c(oa_other = "#b3b3b3a0", ta_oa = "#56B4E9", closed = "#e1e1e1a0"),
                     labels = c(oa_other = "Other", ta_oa = "Agreement", closed = "NA"),  guide = guide_legend(reverse = TRUE)) +
   theme_minimal() +
   labs(x = "Publication year", y = "Total articles")
 
 ```
+
+When analysing the country affiliations of first authors, open access publishing in hybrid journals including through transformative agreements was almost exclusively prevalent in western economies between 2018 and 2022. 
+To highlight this trend, Figure 2A groups the country affiliation according to its membership in the intergovernmental organisations BRICS as of 2022, comprising the five countries Brazil, Russia, India, China and South Africa, and in the Organisation for Economic Co-operation and Development (OECD), consisting of 38 membership countries. 
+The residual category "Other" comprises the remaining countries.
+Together, OECD countries recorded `r oecd_stats_global |> filter(cat == "OECD") |> pull(oa)` open access articles in hybrid journals between 2018 and 2022, representing `r oecd_stats_global |> filter(cat == "OECD") |> pull(oa) / n_oa * 100`% of the investigated open access articles in hybrid journals in the five-year period. 
+The gap between OECD and the other countries is even more pronounced  when it comes to open access through transformative agreements. 
+Overall, `r oecd_stats_global |> filter(cat == "OECD") |> pull(ta_oa)` of `r n_ta_oa` open access articles were linked to an agreement, representing `r oecd_stats_global |> filter(cat == "OECD") |> pull(ta_oa) / n_ta_oa*100`%. 
+Focusing on publications from first authors affiliated with institutions based in an OECD country reveals an absolute and relative growth of hybrid open access. 
+In the five-year period, the proportion of open access in hybrid journals increased from `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2018) |> mutate(prop = value / all) |> pull(prop) |> sum() * 100`% in 2018 to `r country_bar$data |> filter(cat == "OECD", oa_type != "closed", cr_year == 2022) |> mutate(prop = value / all) |> pull(prop) |> sum() * 100`% in 2022. 
+In contrast, BRICS recorded low growth rates, from `r country_bar$data |> filter(cat == "BRICS", oa_type != "closed", cr_year == 2018) |> mutate(prop = value / all) |> pull(prop) |> sum() * 100`% in 2018 to `r country_bar$data |> filter(cat == "BRICS", oa_type != "closed", cr_year == 2022) |> mutate(prop = value / all) |> pull(prop) |> sum() * 100`% in 2022.  
+
+It is worth noting that while the number of open access articles increased across OECD countries, the overall publication output decreased sharply, dropping to xxxx in 2022 from a peak of xxx articles in 2020. 
+In stark contrast, the number of articles published in hybrid journals by first authors affiliated with institutions from BRICS countries increased steadily over the years. 
+Upon inspection, this trend can be observed across publishers, although the shift towards BRICS is particularly prevalent across Elsevier's hybrid journal portfolio.
+Upon closer examination, this trend can be observed across publishers, although the shift towards BRICS is particularly evident in Elsevier's hybrid journal portfolio.
+
+
+
+figure b compares oa articles with total articles in hybrid journals in the final year of your study. Trend line indicates
+it highligths that in 2022, china has been the most prodi´cutive country, followed by the usa and india. it shows taht mainly the west and european coutrnie, in particular above a
+
+in tersm of market share the uk alone contrib by . surpringsly, with not conevrage  ndd. countries with gugh rates of ar ein particular nethrrlnacd sewden and suisse. the former two already introduced long ihsitrory of 
+
+sCountries wirh compatrabel large open access 
+
+it furthermore highligths oecd countries an 
+
+
+
+
 
 ```{r country_patch, fig.asp=0.9}
 library(patchwork)
