--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -1049,7 +1049,72 @@ country_bar <- ggplot(oecd_stats_df, aes(gsub("^20", "'", as.character(cr_year))
                     labels = c(oa_other = "Other", ta_oa = "Agreement", closed = "NA"),  guide = guide_legend(reverse = TRUE)) +
   theme_minimal() +
   labs(x = "Publication year", y = "Total articles")
+```
 
+```{r country_by_publisher}
+publisher_mapping <-  hoaddata::jct_hybrid_jns |>
+  distinct(issn_l, esac_publisher) 
+subject_mapping <- subject_df |>
+  distinct(issn_l, top_level)
+country_jn_all <- oecd_stats |>
+  filter(!cr_year %in% c(2017, 2023), issn_l != "0027-8424") |>
+  # only with cc
+  filter(issn_l %in% hoaddata::cc_articles$issn_l) |>
+  inner_join(publisher_mapping, by = "issn_l") |>
+  inner_join(subject_mapping, by = "issn_l") |>
+  # Publisher encoding
+   mutate(
+    publisher = case_when(
+      esac_publisher == "Elsevier" ~ "Elsevier",
+      esac_publisher == "Springer Nature" ~ "Springer Nature",
+      esac_publisher == "Wiley" ~ "Wiley",
+      is.character(esac_publisher) ~ "Other"
+    )
+  ) |>
+  mutate(publisher =
+           forcats::fct_relevel(
+             publisher,
+             c("Elsevier", "Springer Nature", "Wiley", "Other") 
+           ))  |> 
+  group_by(cr_year, publisher, cat, top_level) |>
+  summarise(all = sum(articles),
+            oa = sum(oa),
+            ta_oa = sum(ta_oa), .groups = "drop") |>
+  mutate(closed = all - oa,
+         oa_other = oa - ta_oa) 
+
+publ_subject_output_df <- country_jn_all |>
+  distinct(cr_year, publisher, top_level, cat, all) |>
+  filter(!top_level %in% c("Multidisciplinary", NA))
+ 
+pub_subject_output_plot <-  ggplot(publ_subject_output_df, aes(gsub("^20", "'", as.character(cr_year)), all, fill = cat)) +
+  geom_bar(stat = "identity", position = position_dodge2(preserve = "single")) +
+  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels =  scales::number_format(big.mark = ",")) +
+  scale_fill_manual(NULL, values = c("OECD" = "#d01c8b", "BRICS" = "#4dac26", "Other" = "#f7f7f7")) +
+  facet_grid(publisher ~ top_level) +
+  theme_minimal() +
+  labs(x = "Publication year", y = "Total articles")
+
+subject_output_plot <- publ_subject_output_df |>
+  group_by(cr_year, top_level, publisher) |>
+  summarise(all = sum(all)) |>
+  ggplot(aes(cr_year, all)) +
+  geom_bar(stat = "identity") +
+  facet_grid(top_level ~ publisher) +
+  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels =  scales::number_format(big.mark = ",")) +
+   theme_minimal() +
+  labs(x = "Publication year", y = "Total articles")
+
+publisher_output_plot <-
+  publ_subject_output_df |>
+  group_by(cr_year, cat, publisher) |>
+  summarise(all = sum(all)) |>
+  ggplot(aes(cr_year, all)) +
+  geom_bar(stat = "identity") +
+  facet_grid(cat ~ publisher) +
+  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels =  scales::number_format(big.mark = ",")) +
+   theme_minimal() +
+  labs(x = "Publication year", y = "Total articles")
 ```
 
 When analysing the country affiliations of first authors, open access publishing in hybrid journals including through transformative agreements was almost exclusively prevalent in western economies between 2018 and 2022. 
@@ -1065,19 +1130,15 @@ In contrast, BRICS recorded low growth rates, from `r country_bar$data |> filter
 It is worth noting that while the number of open access articles increased across OECD countries, the overall publication output decreased sharply, dropping to xxxx in 2022 from a peak of xxx articles in 2020. 
 In stark contrast, the number of articles published in hybrid journals by first authors affiliated with institutions from BRICS countries increased steadily over the years. 
 Upon inspection, this trend can be observed across publishers, although the shift towards BRICS is particularly prevalent across Elsevier's hybrid journal portfolio.
-Upon closer examination, this trend can be observed across publishers, although the shift towards BRICS is particularly evident in Elsevier's hybrid journal portfolio.
+Upon closer examination, this trend can be observed across publishers, although the shift towards BRICS is particularly evident in Elsevier's hybrid journal portfolio, in particular with regard to articles published in Physical Sciences journals (see Supplement). 
+While OECD publication output in Elsevier's Physical Sciences journals declined from `r publ_subject_output_df |> filter(cr_year == 2018, top_level == "Physical Sciences", publisher == "Elsevier", cat == "OECD") |> pull(all)` articles in 2018 to `r publ_subject_output_df |> filter(cr_year == 2022, top_level == "Physical Sciences", publisher == "Elsevier", cat == "OECD") |> pull(all)` in 2022, BRICS output increased from `r publ_subject_output_df |> filter(cr_year == 2018, top_level == "Physical Sciences", publisher == "Elsevier", cat == "BRICS") |> pull(all)` to `r publ_subject_output_df |> filter(cr_year == 2022, top_level == "Physical Sciences", publisher == "Elsevier", cat == "BRICS") |> pull(all)` in the same five-year period.
+But also the OECD publication output in Health Science Journals and Life Science journals stagnated across after a peak in 2020. 
 
+Figure B and C presents a breakdown by countries for the publication year 2022. Figure B compares total publication output with the number of open access articles published during the final year investigated, highlighting that in 2022, china has been the most productive country, followed by the USA and India. 
+However, West and Nord European countries like recorded a comparable high number of open access articles, mainly due to transformative agreements. 
+Nonetheless, China and the US recorded large open access market shares of xxx resp. xxx, although country-wide transformative agreements were not implemented. 
 
-
-figure b compares oa articles with total articles in hybrid journals in the final year of your study. Trend line indicates
-it highligths that in 2022, china has been the most prodi´cutive country, followed by the usa and india. it shows taht mainly the west and european coutrnie, in particular above a
-
-in tersm of market share the uk alone contrib by . surpringsly, with not conevrage  ndd. countries with gugh rates of ar ein particular nethrrlnacd sewden and suisse. the former two already introduced long ihsitrory of 
-
-sCountries wirh compatrabel large open access 
-
-it furthermore highligths oecd countries an 
-
+Figure highlights the development of hybrid open access and shows the top 20 most productive countries in terms of articles published in hybrid journals included in transformative agreements between 2018 and 2022. In particular, the UK, Netherlands, and Sweden were hybrid affin, wheras in othe rcountries like Gemrany a large grwoth could be observed from 2020 obwards where the large DEAL agreements have becpome in place. The high open access rates in Netherlands ,s witzerlands, and Sweden conforms the braod implementation of agreemnts across a lrge number publishers where .... whereas in othe rcountries, agreements were limited to a fewer number of publishers. Take for isntance germany, were a deal with Elsevier was not in place in 2022. But also publication limits or of elegible inistutions and article types might contribute to the fact taht even in countries with a broad impleemntation, 100% is not reached. Again, the figure points to countries with low hybrid open access, in particular  non OECD countries.
 
 
 
@@ -1106,85 +1167,8 @@ wrap_plots(
 
 ### Supplements
 
-```{r country_by_publisher}
-country_jn_all <- hoaddata::jn_aff |>
-  filter(!cr_year %in% c(2017, 2023), issn_l != "0027-8424") |>
-  # only with cc
-  filter(issn_l %in% hoaddata::cc_articles$issn_l) |>
-  distinct(issn_l, cr_year, country_code, articles_total) |>
-  group_by(cr_year, country_code, issn_l) |>
-  summarise(all = sum(articles_total))
-
-country_jn_oa <- hoaddata::cc_articles |>
-  filter(!cr_year %in% c(2017, 2023), issn_l != "0027-8424") |>
-  group_by(cr_year, country_code, issn_l) |>
-  summarise(oa = n_distinct(doi))
-
-country_codes <- readr::read_csv(here::here("data", "ror_country_codes.csv"))
-country_jn_ta <-  ta_oa_inst |>
-  filter(ta_active == TRUE, !is.na(cc), issn_l != "0027-8424", !cr_year %in%  c("2017", "2023")) |>
-  left_join(country_codes) |>
-  group_by(cr_year, country_code, issn_l) |>
-  summarise(ta_oa = n_distinct(doi))
-
-country_jn_df <- country_jn_all |>
-  left_join(country_jn_oa, by = c("cr_year", "country_code", "issn_l")) |>
-  left_join(country_jn_ta, by = c("cr_year", "country_code", "issn_l")) |>
-  distinct() |>
-  ungroup() |>
-  mutate(cr_year = as.character(cr_year)) |>
-  mutate(across(c(oa, ta_oa), .fns = ~replace_na(.,0))) |>
-  filter(!is.na(country_code)) |>
-  mutate(
-    country_name = countrycode::countrycode(country_code, origin = "iso2c", destination = "country.name")
-  )
-
-## add publishers
-country_by_publisher_df <- hoaddata::jct_hybrid_jns |>
-  distinct(issn_l, esac_publisher) |>
-  inner_join(country_jn_df, by = "issn_l") |>
-  # Publisher encoding
-   mutate(
-    publisher = case_when(
-      esac_publisher == "Elsevier" ~ "Elsevier",
-      esac_publisher == "Springer Nature" ~ "Springer Nature",
-      esac_publisher == "Wiley" ~ "Wiley",
-      is.character(esac_publisher) ~ "Other"
-    )
-  ) |>
-  mutate(publisher =
-           forcats::fct_relevel(
-             publisher,
-             c("Elsevier", "Springer Nature", "Wiley", "Other") 
-           )) |>
-  # Country encoding
-   mutate(cat = case_when(
-    country_code %in% oecd$country_code ~ "OECD",
-    country_code %in% c("BR", "CN", "IN", "RU", "ZA") ~ "BRICS",
-    .default = "Other"
-  )) |>
-  # Summary
-  group_by(cr_year, publisher, cat) |>
-  summarise(all = sum(all),
-            oa = sum(oa),
-            ta_oa = sum(ta_oa), .groups = "drop") |>
-  mutate(closed = all - oa,
-         oa_other = oa - ta_oa)
-
-# Plot
-country_by_publisher_df |>
-  pivot_longer(cols = c(ta_oa, oa_other, closed), names_to = "oa_type") |>
-  ggplot(aes(gsub("^20", "'", as.character(cr_year)), value, group = oa_type, fill = oa_type)) +
-  geom_area(color = "#000000",
-            linewidth = 0.15) +
-  scale_y_continuous(expand = expansion(mult = c(0, 0.05)), labels =  scales::number_format(big.mark = ",")) +
-  facet_grid(cat ~publisher) +
-  scale_fill_manual("Hybrid OA", values = c(oa_other = "#b3b3b3a0", ta_oa = "#56B4E9", closed = "#e1e1e1a0"),
-                    labels = c(oa_other = "Other", ta_oa = "Agreement", closed = "NA"),  guide = guide_legend(reverse = TRUE)) +
-  theme_minimal() +
-  labs(x = "Publication year", y = "Total articles")
+```{r}
+pub_subject_output_plot
 ```
-
-
 
 [^springercompact]: <https://web.archive.org/web/20180414062853id_/http://www.liber2015.org.uk/wp-content/uploads/2015/03/Springer-Compact.pdf> 
