--- a/analysis/001_overview.Rmd
+++ b/analysis/001_overview.Rmd
@@ -1138,7 +1138,7 @@ Figure B and C presents a breakdown by countries for the publication year 2022. 
 However, West and Nord European countries like recorded a comparable high number of open access articles, mainly due to transformative agreements. 
 Nonetheless, China and the US recorded large open access market shares of xxx resp. xxx, although country-wide transformative agreements were not implemented. 
 
-Figure highlights the development of hybrid open access and shows the top 20 most productive countries in terms of articles published in hybrid journals included in transformative agreements between 2018 and 2022. In particular, the UK, Netherlands, and Sweden were hybrid affin, wheras in othe rcountries like Gemrany a large grwoth could be observed from 2020 obwards where the large DEAL agreements have becpome in place. The high open access rates in Netherlands ,s witzerlands, and Sweden conforms the braod implementation of agreemnts across a lrge number publishers where .... whereas in othe rcountries, agreements were limited to a fewer number of publishers. Take for isntance germany, were a deal with Elsevier was not in place in 2022. But also publication limits or of elegible inistutions and article types might contribute to the fact taht even in countries with a broad impleemntation, 100% is not reached. Again, the figure points to countries with low hybrid open access, in particular  non OECD countries.
+Figure highlights the development of hybrid open access and shows the top 20 most productive countries in terms of articles published in hybrid journals included in transformative agreements between 2018 and 2022. In particular, the UK, Netherlands, and Sweden were hybrid affin, wheras in othe rcountries like Gemrany a large grwoth could be observed from 2020 obwards where the large DEAL agreements have becpome in place. The high open access rates in Netherlands ,s witzerlands, and Sweden conforms the braod implementation of agreemnts across a lrge number publishers where whereas in othe rcountries, agreements were limited to a fewer number of publishers. Take for isntance germany, were a deal with Elsevier was not in place in 2022. But also publication limits or of elegible inistutions and article types might contribute to the fact taht even in countries with a broad impleemntation, 100% is not reached. Again, the figure points to countries with low hybrid open access, in particular  non OECD countries.
 
 
 
